--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -10,6 +10,9 @@ stack-inserter-resource=Stack Inserter Resource
 steel-chest-resource=Steel Chest Resource
 express-splitter-resource=Express Splitter Resource
 low-density-structure-resource=Low Density Structure Resource
+speed-module-3-resource=Speed Module 3 Resource
+productivity-module-3-resource=Productivity Module 3 Resource
+beacon-resource=Beacon Resource
 
 [autoplace-control-names]
 rocket-silo-resource=[img=entity/rocket-silo] Rocket Silos
@@ -23,3 +26,6 @@ stack-inserter-resource=[img=entity/stack-inserter] Stack Inserters
 steel-chest-resource=[img=entity/steel-chest] Steel Chests
 express-splitter-resource=[img=entity/express-splitter] Express Splitters
 low-density-structure-resource=[img=item/low-density-structure] Low Density Structures
+speed-module-3-resource=[img=item/speed-module-3] Speed Module 3s
+productivity-module-3-resource=[img=item/productivity-module-3] Productivity Module 3s
+beacon-resource=[img=entity/beacon] Beacons
